// Copyright 2025 The Sigstore Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package dev.sigstore.rekor.v2;

import "google/api/field_behavior.proto";
import "sigstore_common.proto";

import "verifier.proto";

option go_package = "github.com/sigstore/rekor-tiles/pkg/generated/protobuf";

// A request to add a hashedrekord to the log
message HashedRekordRequest {
    // A single signature over the hashed data
    bytes signature = 1 [(google.api.field_behavior) = REQUIRED];
    // The hashed data
    dev.sigstore.common.v1.HashOutput data = 2 [(google.api.field_behavior) = REQUIRED];
    // A key/cerificate to verify the signature
    Verifier verifier = 3 [(google.api.field_behavior) = REQUIRED];
}
